# SMU

./: .gitignore  CMakeLists.txt  README.md
.cursor/: tasks.json
doc/: Cpp-AI工程搭建指南.md  README.md  build_and_test_automation.md  smu本地+OTA升级设计.md
lib/arm64/: libzstd.so.1.5.7
src/10-include/SmuUtils/: Compression.h  SmuUtils.h  Version.h
src/10-include/Utility/: Compression.h  Utility.h  Version.h
src/10-include/WCDB/: WCDBCpp.h
src/10-include/model/: model_sample.h
src/20-components/libutility/: CMakeLists.txt
src/20-components/libutility/src/: Compression.cpp  Version.cpp
src/20-components/smu_utils/: CMakeLists.txt
src/20-components/smu_utils/src/: Compression.cpp  Version.cpp
src/21-test_demo/wcdb_test/: CMakeLists.txt  wcdb_test.cpp
src/21-test_demo/zstd_test/: CMakeLists.txt  zstd_test.cpp
tool/cmake/: common.cmake  toolchain_arm64.cmake
tool/script/: build.sh  build_and_test.sh  test.sh  utils.sh
